--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
