--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<description> project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		 <maven.compiler.target>1.8 </maven.compiler.target>
+		<org.mapstruct.version>1.4.2.Final </org.mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +69,19 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.4.2.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.4.2.Final</version>
+		</dependency>
+
 
 
 
